Fixed spelling issues in js. Infinite doesn't have an a in. Fixed white space error in json-rpc php Re-styled sections Added credits page names
git-svn-id: http://es-search.googlecode.com/svn/trunk@5 f2546742-f0b6-11de-ba40-05aa5ec858d5

--- a/public/res/css_dev/global.css
+++ b/public/res/css_dev/global.css
@@ -5,6 +5,10 @@ body{
     font-size: 90%;
 }
 
+#content{
+    margin:25px;
+}
+
 #modInfo{
     margin-left: 420px;
 }
